# semantic_parser

./: .prettierrc  LICENSE  justfile  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: csv_parser.rs  export.rs  lib.rs  main.rs  nlp.rs
src/components/: ResultsTable.tsx  Table.tsx
