[package]
name = "semantic_parser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "semantic_parser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.2.0"
fastembed = "4.3.0"
fast-umap = "0.0.1"
burn = "0.15.0"
hdbscan = "0.9.0"
ndarray = "0.16"
petal-decomposition = "0.8.0"
tauri-plugin-dialog = "2"
csv = "1.3.1"
tokio = { version = "1.42.0", features = ["time"] }
slugify = "0.1.0"
wcloud = "0.1.0"
nanorand = "0.7.0"
palette = "0.6.1"
image = "0.24.6"

